--- a/simpleservice/pom.xml
+++ b/simpleservice/pom.xml
@@ -21,11 +21,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-    <dependency>
-      <groupId>javax.activation</groupId>
-      <artifactId>activation</artifactId>
-      <version>1.1</version>
-    </dependency>
   </dependencies>
 
   <properties>
@@ -69,6 +64,13 @@
         <groupId>com.spotify</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <version>0.4.10</version>
+        <dependencies>
+          <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+          </dependency>
+        </dependencies>
         <configuration>
           <imageName>${docker.image.name}:${docker.image.tag}</imageName>
           <dockerDirectory>${basedir}/target/dockerfile</dockerDirectory>
