registry licensingservice to eurekasvr

--- a/confsvr/src/main/resources/application.yml
+++ b/confsvr/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     active: native
   cloud:
     config:
+      discovery:
+        enabled: true
       server:
         native:
           searchLocations: E:/tmp
