--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 
   <name>spmia-parent-pom</name>
-  <description>Parent Pom for the thoughtmechanix project</description>
+  <description>Parent Pom for the spring cloud demo project</description>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -21,6 +21,7 @@
     <module>simpleservice</module>
     <module>licensing-service</module>
     <module>eurekasvr</module>
+      <module>zuulsvr</module>
   </modules>
   <build>
     <plugins>
