Enable actuator routes in zuulsrv

--- a/zuulsvr/src/main/resources/application.yml
+++ b/zuulsvr/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 5555
+  error:
+    whitelabel:
+      enabled: false
 
 spring:
   application:
@@ -17,3 +20,13 @@ eureka:
 zuul:
   routes:
     licensingservice: /licensingservice/**
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+    routes:
+      enabled: true
+    health:
+      enabled: true
