--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
     <module>simpleservice</module>
     <module>licensing-service</module>
     <module>eurekasvr</module>
-      <module>zuulsvr</module>
+    <module>zuulsvr</module>
+      <module>authentication-service</module>
   </modules>
   <build>
     <plugins>
